# poly

./: .gitignore  API.md  README  README.md  config.example.json  config.json  rebuild.md  run.py
.cursor/plans/: polymarket数据同步系统_a76a478c.plan.md
core-backend/projects/core/: CMakeLists.txt
core-backend/src/: big_sync.hpp  config.hpp  db.hpp  entities.hpp  entity_stats.hpp  graphql.hpp  http_server.hpp  https_pool.hpp  introspector.hpp  main.cpp  puller.hpp  rebuilder.hpp  rebuilder.md  rebuilder_loader.hpp  rebuilder_types.hpp  rebuilder_worker.hpp  schema.hpp
core-backend/src/api/: api_server.hpp  api_session.hpp
core-backend/src/core/: config.hpp  database.hpp  entity_definition.hpp
core-backend/src/infra/: rpc_client.hpp
core-backend/src/rebuild/: rebuilder.hpp  rebuilder_types.hpp
core-backend/src/replayer/: replayer.hpp
core-backend/src/stats/: stats_manager.hpp
core-backend/src/sync/: event_parser.hpp  sync_coordinator.hpp  sync_incremental_coordinator.hpp  sync_incremental_executor.hpp  sync_incremental_scheduler.hpp  sync_repair.hpp
core-frontend/: backend_api.py  graph_status.py  main.py
core-frontend/templates/: index.html
core-frontend/templates/components/: contract_status.html  graph_status.html  pnl_rebuilder.html  pnl_replayer.html  sync_status.html
doc/: Chain.md  Learning.md  Polygon.md  Protocol.md
doc/indexer/: README.md  overview.md
doc/indexer/the graph/implemented/: README.md
doc/indexer/the graph/implemented/schema/: get_all.py
doc/smart-contracts/: conditional-tokens-contracts.md  ctf-exchange.md  exchange-fee-module.md  neg-risk-ctf-adapter.md  poly-lend.md  proxy-factory.md  safe-factory.md  uma-ctf-adapter.md  uma-sports-oracle.md
frontend/: requirements.txt
scripts/: api_db.py  dump_events.py  scan_events.py
scripts/events/Erigon/: ConditionResolution.csv  FPMMBuy.csv  FPMMFundingAdded.csv  FPMMSell.csv  MarketPrepared.csv  OrderFilled.csv  OrdersMatched.csv  OutcomeReported.csv  PayoutRedemption.csv  PositionSplit.csv  PositionsConverted.csv  PositionsMerge.csv  QuestionPrepared.csv  TokenRegistered.csv  TransferSingle.csv
scripts/events/dRPC/: ConditionPreparation.csv  FPMMCreation.csv  FPMMFundingRemoved.csv  OrderFilled.csv  OutcomeReported.csv  PayoutRedemption.csv  PositionsConverted.csv  PositionsMerge.csv  QuestionPrepared.csv  TokenRegistered.csv  TransferBatch.csv  TransferSingle.csv
syncer/: CMakeLists.txt
syncer/src/: config.hpp  db.hpp  graphql.hpp  http_client.hpp  main.cpp  schema.hpp  syncer.hpp
tmp/: Polymarket Open Interest ELaW6RtkbmYNmMMU6hEPsghG9Ko3EXSmiRkH855M4qfF  Polymarket Profit and Loss 6c58N5U4MtQE2Y8njfVrrAfRykzfqajMGeTMEvMmskVz  polygon_full_node_setup_c52e14f1.plan.md  polymarket  81Dm16JjuFSrqz813HysXoUPvzTwE7fsfPk2RTf66nyC  polymarket activity polygon Bx1W4S7kDVxs9gC3s2G6DS8kdNBJNVhMviCtin2DiBp  run.py
